--- a/template/templates/unitedway/sass/menu.scss
+++ b/template/templates/unitedway/sass/menu.scss
@@ -37,6 +37,58 @@
 	}
 }
 
+.primary {
+	padding-top: 24px;
+	font-weight: 600;
+	
+	li {
+		&:first-child {
+			padding-left: 0;
+		}
+	}
+		
+	a {
+		color: #5f6062;
+		
+		&:hover {
+			color: black;
+			text-decoration: none;
+		}
+	}
+}
+
+.top {
+	float: right;
+	background: url('../images/bg_headerSwoosh.png') top right no-repeat;
+	clear: right;
+	width: 55%;
+	
+	font-size: .85714285714em;
+	text-align: right;
+	
+	.menu {
+		line-height: 34px;
+		
+		li {
+			padding: 0;
+			margin-left: 6px;
+			border-left: 1px solid #ffffff;
+			line-height: 1em;
+			&:first-child {
+				border-left: 0;
+			}
+		}
+	}
+	
+	a {
+		margin-left: 6px;
+		color: white;
+		&:hover {
+			color: white;
+		}
+	}
+}
+
 // @group vmenu
 .vmenu {
 
