--- a/template/templates/unitedway/sass/elements.scss
+++ b/template/templates/unitedway/sass/elements.scss
@@ -1,7 +1,11 @@
 /* elements */
 body, select, input, textarea {
-	color: #444; /* off black */
-	font-family: Helvetica, Arial, sans-serif;
+	color: $text;
+	font-family: "myriad-pro", Helvetica, Arial, sans-serif;
+}
+
+body {
+	font-size: .875em; // 14px
 }
 
 * { 
