--- a/template/templates/unitedway/sass/modules.scss
+++ b/template/templates/unitedway/sass/modules.scss
@@ -2,3 +2,43 @@
 .module {} // DO NOT TOUCH
 .module h3 {} // DO TOUCH
 
+.module.logo {
+	width: 100%;
+	text-align: center;
+	padding-top: 23px;
+}
+
+.module.search-bar-desktop {
+	float: right;
+	margin-top: 30px;
+	position: relative;
+	
+	input {
+		height: 37px;
+		border: 2px solid #efefef;
+		border-radius: 14px;
+	}
+	
+	button {
+		position: absolute;
+		top: 5px;
+		right: 10px;
+		width: 26px;
+		height:25px;
+		background: url('../images/icon_search.png') center center no-repeat;
+		
+		border: none;
+		text-indent: -9999px;
+	}
+}
+
+.module.search-bar-mobile {
+	position: relative;
+	float: right;
+	height: 26px;
+	
+	input {
+		border: 1px solid #efefef;
+		border-radius: 7px;
+	}
+}
