--- a/template/templates/unitedway/sass/styles.scss
+++ b/template/templates/unitedway/sass/styles.scss
@@ -11,3 +11,8 @@
 /* TODO Update selection BG color */
 ::-moz-selection{ background: $red; color:#fff; text-shadow: none; }
 ::selection { background: $red; color:#fff; text-shadow: none; }
+
+.image-border {
+	box-shadow: 0px 0px 8px rgba(0, 0, 0, .15);
+	border: 4px solid #fff;
+}
