--- a/template/templates/unitedway/sass/modules-480.scss
+++ b/template/templates/unitedway/sass/modules-480.scss
@@ -6,3 +6,28 @@
 	text-align: none;
 	padding-top: 0;
 }
+
+.module.search-bar-desktop {
+	float: right;
+	margin-top: 30px;
+	position: relative;
+	
+	input {
+		height: 37px;
+		border: 2px solid #efefef;
+		border-radius: 14px;
+		width: 180px;
+	}
+	
+	button {
+		position: absolute;
+		top: 5px;
+		right: 10px;
+		width: 26px;
+		height:25px;
+		background: url('../images/icon_search.png') center center no-repeat;
+		
+		border: none;
+		text-indent: -9999px;
+	}
+}
