changed default header style

--- a/template/templates/unitedway/sass/elements.scss
+++ b/template/templates/unitedway/sass/elements.scss
@@ -20,7 +20,9 @@ body {
 
 /* Headers (h1, h2, etc) have no default font-size or margin; define those yourself */
 h1, h2, h3, h4, h5, h6 {
-	font-weight: bold;
+	font-weight: 600;
+	margin: 0;
+	padding: .83em 0;
 }
 
 h1 { font-size: 2em; }
