--- a/template/templates/unitedway/sass/elements.scss
+++ b/template/templates/unitedway/sass/elements.scss
@@ -40,3 +40,11 @@ a:hover {
 	color: teal;
 	text-decoration: underline;
 }
+img {
+	max-width: 100%;
+	height: auto;
+	
+	.ie8 & {
+		width: auto;
+	}
+}
