less padding left on UL

--- a/template/templates/unitedway/sass/elements.scss
+++ b/template/templates/unitedway/sass/elements.scss
@@ -40,6 +40,11 @@ a:hover {
 	color: teal;
 	text-decoration: underline;
 }
+
+ul {
+	padding-left: 20px;
+}
+
 img {
 	max-width: 100%;
 	height: auto;
