--- a/template/templates/unitedway/sass/styles.scss
+++ b/template/templates/unitedway/sass/styles.scss
@@ -16,3 +16,15 @@
 	box-shadow: 0px 0px 8px rgba(0, 0, 0, .15);
 	border: 4px solid #fff;
 }
+
+.btn-navbar {
+	@include btn-navbar;
+}
+
+.btn-navbar .icon-bar {
+	@include icon-bar;
+	
+	& + .icon-bar {
+		margin-top: 3px;
+	}
+}
