--- a/template/templates/unitedway/sass/modules.scss
+++ b/template/templates/unitedway/sass/modules.scss
@@ -69,4 +69,20 @@
 		color: $yellow;
 		background: url('../images/icon_events.png');
 	}
+//headers with icon
+.module.goals h3 {
+	background: url('../images/icon_goals.png');
+}
+
+.module.downloads h3 {
+	background: url('../images/icon_downloads.png');
+}
+
+.module.news h3 {
+	background: url('../images/icon_news.png');
+}
+
+.module.events h3 {
+	background: url('../images/icon_events.png');
+}
 }
