bottom mod layout for 480

--- a/template/templates/unitedway/sass/modules-480.scss
+++ b/template/templates/unitedway/sass/modules-480.scss
@@ -31,3 +31,16 @@
 		text-indent: -9999px;
 	}
 }
+
+#bottom .module {
+	width: 48.936170213%;
+	float: left;
+	
+	&.first {
+		width: 100%;
+	}
+	
+	&.third {
+		margin-left: 2.127659574%; //20px
+	}
+}
