--- a/template/templates/unitedway/sass/modules.scss
+++ b/template/templates/unitedway/sass/modules.scss
@@ -85,4 +85,13 @@
 .module.events h3 {
 	background: url('../images/icon_events.png');
 }
+
+
+//show-menu 
+
+.module.show-menu {
+	position: absolute;
+	top: 1px;
+	height: 28px;
+	width: 40px;
 }
