content wide1 class

--- a/template/templates/unitedway/sass/layout.scss
+++ b/template/templates/unitedway/sass/layout.scss
@@ -42,6 +42,12 @@ body.menu-open #wrapper {
 	a {
 		color: #ffffff;
 	}
+}
+
+#content.wide1 {
+	width: 100%;
+}
+
 #mobile-menu {
 	position: fixed;
 	padding: 30px 40px;
