content and sidebar layout for 960

--- a/template/templates/unitedway/sass/layout-960.scss
+++ b/template/templates/unitedway/sass/layout-960.scss
@@ -2,3 +2,15 @@
 	width: 960px;
 	padding: 0 10px;
 }
+
+#content {
+	width: 65.957446809%;
+	float: left;
+}
+
+#sidebar {
+	width: 34.042553191%;
+	padding-left: 2.127659574%;
+	margin-top: -10px;
+	float: left;
+}
