--- a/template/templates/unitedway/sass/_mixins.scss
+++ b/template/templates/unitedway/sass/_mixins.scss
@@ -6,3 +6,50 @@
 	&:after { clear:both; }
 	& { zoom:1; }
 }
+
+@mixin transition($settings) {
+	-webkit-transition: $settings;
+	-moz-transition: $settings;
+	-o-transition: $settings;
+	-ms-transition: $settings;
+	transition: $settings;
+}
+
+@mixin btn-navbar {
+	display: inline-block;
+  	*display: inline;
+ 	 /* IE7 inline-block hack */
+
+    *zoom: 1;
+    padding: 7px 10px;
+    margin-bottom: 0;
+    font-size: 13px;
+    line-height: 18px;
+    *line-height: 20px;
+    color: #333333;
+    text-align: center;
+    text-shadow: 0 1px 1px rgba(255, 255, 255, 0.75);
+    vertical-align: middle;
+    cursor: pointer;
+	background-color: #aa0c04;
+	box-shadow: inset 0 1px 0 rgba(255, 255, 255, .25);
+
+    -webkit-border-radius: 4px;
+    -moz-border-radius: 4px;
+    border-radius: 4px;
+    *margin-left: .3em;
+} 
+
+@mixin icon-bar {
+	display: block;
+ 	width: 18px;
+ 	height: 2px;
+	margin-top: 1px;
+ 	background-color: whiteSmoke;
+ 	-webkit-border-radius: 1px;
+ 	-moz-border-radius: 1px;
+ 	border-radius: 1px;
+ 	-webkit-box-shadow: 0 1px 0 rgba(0, 0, 0, 0.25);
+ 	-moz-box-shadow: 0 1px 0 rgba(0, 0, 0, 0.25);
+	box-shadow: 0 1px 0 rgba(0, 0, 0, 0.25);
+}
