--- a/template/templates/unitedway/sass/modules.scss
+++ b/template/templates/unitedway/sass/modules.scss
@@ -6,15 +6,31 @@
 	padding-top: 40px;
 }
 
-.module.search-bar-mobile {
-	position: relative;
-	float: right;
-	height: 26px;
+.module.search-bar {
+	position: absolute;
+	top: 1px;
+	right: 10px;
 	
 	input {
 		border: 1px solid #efefef;
 		border-radius: 7px;
-		padding-left: 10px;
+		padding-left: 5px;
+		height: 26px;
+	}
+	
+	button {
+		position: absolute;
+		top: 0px;
+		right: 5px;
+		width: 26px;
+		height:25px;
+		background: url('../images/icon_search.png') center center no-repeat;
+		background-size: 75%;
+		
+		border: none;
+		text-indent: -9999px;
+	}
+}
 	}
 }
 
