start of twitter feed modules

--- a/template/templates/unitedway/sass/modules-480.scss
+++ b/template/templates/unitedway/sass/modules-480.scss
@@ -27,6 +27,16 @@
 		background-size: 100%;
 	}
 }
+
+.module.feed-twitter {
+	
+	.twitter-title {
+	}
+	
+	.twitter-tweet {
+		width: auto;
+		text-align: left;
+		float: none;
 	}
 }
 
