--- a/template/templates/unitedway/sass/modules.scss
+++ b/template/templates/unitedway/sass/modules.scss
@@ -31,7 +31,24 @@
 		text-indent: -9999px;
 	}
 }
+
+.module.feed-twitter {
+	
+	.twitter-title {
+		font-size: 15px;
+		color: $red;
+		margin: 0 20px 10px 0;
+		padding-top: 0;
+		float: left;
+		width: 145px;
 	}
+	
+	.twitter-tweet {
+		margin: 0;
+		text-align: center;
+		float: left;
+	}
+	
 }
 
 //colored modules
