set header to have only padding bottom on mobile

--- a/template/templates/unitedway/sass/layout.scss
+++ b/template/templates/unitedway/sass/layout.scss
@@ -18,7 +18,7 @@ body.menu-open #wrapper {
 }
 
 #header {
-	padding: 4px 0 20px;
+	padding: 0 0 20px;
 	background: url('../images/bg_headerRepeat-mobile.png') top center repeat-x;
 }
 
