--- a/template/templates/unitedway/sass/layout.scss
+++ b/template/templates/unitedway/sass/layout.scss
@@ -26,6 +26,11 @@ body.menu-open #wrapper {
 	padding: 0 0 20px;
 }
 
+#top {
+	padding: 20px 0;
+	background: url('../images/divider_dotted.png') top center repeat-x;
+}
+
 #main {
 	padding: 20px 0;
 	background: url('../images/divider_dotted.png') top center repeat-x;
