only padding top on footer

--- a/template/templates/unitedway/sass/layout.scss
+++ b/template/templates/unitedway/sass/layout.scss
@@ -37,7 +37,7 @@ body.menu-open #wrapper {
 }
 
 #footer {
-	padding: 20px 0;
+	padding: 20px 0 0;
 	background: url('../images/bg_footerRepeat.png') top center repeat-x;
 	min-height: 174px;
 	
