--- a/template/templates/unitedway/sass/modules-760.scss
+++ b/template/templates/unitedway/sass/modules-760.scss
@@ -5,6 +5,16 @@
 	}
 }
 
+.module.feed-twitter {
+	width: 80%;
+}
+
+.module.social-links {
+	width: 20%;
+	float: right;
+	margin-top: 0;
+}
+
 #bottom .module {
 	width: 34.042553191%%;
 	padding-left: 2.127659574%; //20px
