--- a/template/templates/unitedway/sass/menu.scss
+++ b/template/templates/unitedway/sass/menu.scss
@@ -45,15 +45,15 @@
 		&:first-child {
 			padding-left: 0;
 		}
+		&:hover a,
+		&.active a {
+			color: black;
+			text-decoration: none;
+		}
 	}
 		
 	a {
 		color: #5f6062;
-		
-		&:hover {
-			color: black;
-			text-decoration: none;
-		}
 	}
 }
 
