centre on top position on default

--- a/template/templates/unitedway/sass/layout.scss
+++ b/template/templates/unitedway/sass/layout.scss
@@ -29,6 +29,7 @@ body.menu-open #wrapper {
 #top {
 	padding: 20px 0;
 	background: url('../images/divider_dotted.png') top center repeat-x;
+	text-align: center;
 }
 
 #main {
