no text align after 480px in top position

--- a/template/templates/unitedway/sass/layout-480.scss
+++ b/template/templates/unitedway/sass/layout-480.scss
@@ -2,3 +2,7 @@
 	padding-top: 30px;
 	background: url('../images/bg_headerRepeat-desktop.png') top center no-repeat;
 }
+
+#top {
+	text-align: none;
+}
