logo bg classes

--- a/template/templates/unitedway/sass/styles.scss
+++ b/template/templates/unitedway/sass/styles.scss
@@ -17,6 +17,18 @@
 	border: 4px solid #fff;
 }
 
+.bg-logo-red {
+	background: url('../images/bg_logo-red.png');
+}
+
+.bg-logo-blue {
+	background: url('../images/bg_logo-blue.png');
+}
+
+.bg-logo-yellow {
+	background: url('../images/bg_logo-yellow.png');
+}
+
 //icons
 
 .icon-goals h3 {
