read-more class

--- a/template/templates/unitedway/sass/styles-480.scss
+++ b/template/templates/unitedway/sass/styles-480.scss
@@ -6,3 +6,8 @@
 .phone-visible, .desktop-visible,
 .tablet-hidden, .mobile-hidden
 	{ display: none; }
+
+a.read-more {
+	position: absolute;
+	bottom: 0;
+}
