sidebar and bottom module background set up

--- a/template/templates/unitedway/sass/modules.scss
+++ b/template/templates/unitedway/sass/modules.scss
@@ -62,6 +62,9 @@
 #bottom {
 	
 	.module {
+		background-repeat: no-repeat;
+		background-position: bottom right;
+		position: relative;
 		
 		h3 {
 			font-size: 15px;
