sidebar module padding and margin after 480

--- a/template/templates/unitedway/sass/modules-480.scss
+++ b/template/templates/unitedway/sass/modules-480.scss
@@ -42,6 +42,11 @@
 	}
 }
 
+#sidebar .module {
+	padding-bottom: 20px;
+	margin-bottom: 10px;
+}
+
 #bottom .module {
 	width: 48.936170213%;
 	float: left;
