import of menu-760 scss

--- a/template/templates/unitedway/sass/template-ie.min.scss
+++ b/template/templates/unitedway/sass/template-ie.min.scss
@@ -32,5 +32,6 @@
 @import "styles-760";
 @import "layout-960";
 @import "modules-960";
+@import "menu-960";
 @import "styles-960";
 // don't load 1100, assume std desktop
