--- a/template/templates/unitedway/sass/template.scss
+++ b/template/templates/unitedway/sass/template.scss
@@ -36,6 +36,7 @@
 @media only screen and (min-width:960px) {
 	@import "layout-960";
 	@import "modules-960";
+	@import "menu-960";
     @import "styles-960";
 }
 @media only screen and (min-width:1100px) {
