background size on bottom modules set to 30% on phone

--- a/template/templates/unitedway/sass/modules.scss
+++ b/template/templates/unitedway/sass/modules.scss
@@ -71,6 +71,7 @@
 	.module {
 		background-repeat: no-repeat;
 		background-position: bottom right;
+		background-size: 30%;
 		position: relative;
 		
 		h3 {
