primary menu last class styled

--- a/template/templates/unitedway/sass/menu.scss
+++ b/template/templates/unitedway/sass/menu.scss
@@ -45,6 +45,13 @@
 		&:first-child {
 			padding-left: 0;
 		}
+		&.last {
+			float: right;
+			
+			a {
+				color: $red;
+			}
+		}
 		&:hover a,
 		&.active a {
 			color: black;
