--- a/template/templates/unitedway/sass/styles.scss
+++ b/template/templates/unitedway/sass/styles.scss
@@ -65,6 +65,12 @@ a.read-more {
 	padding-left: 53px;
 }
 
+.icon-back-to-top {
+	background: url('../images/icon_back-to-top.png') left center no-repeat;
+	padding: .83em 0 .83em 35px;
+	background-size: 24px;
+}
+
 //colors
 
 .colored-red {
