footer logos margin

--- a/template/templates/unitedway/sass/modules.scss
+++ b/template/templates/unitedway/sass/modules.scss
@@ -118,6 +118,9 @@
 	margin-bottom: 1em;
 }
 
+.module.footer-logos {
+	margin-bottom: 1em;
+}
 .module.show-menu {
 	position: absolute;
 	top: 1px;
