back-to-top button margin

--- a/template/templates/unitedway/sass/modules.scss
+++ b/template/templates/unitedway/sass/modules.scss
@@ -121,6 +121,12 @@
 .module.footer-logos {
 	margin-bottom: 1em;
 }
+
+.module.back-to-top {
+	font-size: 15px;
+}
+
+//show-menu 
 .module.show-menu {
 	position: absolute;
 	top: 1px;
