footer mod widths

--- a/template/templates/unitedway/sass/modules-760.scss
+++ b/template/templates/unitedway/sass/modules-760.scss
@@ -51,4 +51,19 @@
 	&.first {
 		width: 31.205673759%;
 	}
+#copyright {
+	width: 33.333%;
+	float: left;
+}
+
+.module.back-to-top {
+	width: 33.333%;
+	float: left;
+	text-align: right;
+}
+
+.module.footer-logos {
+	width: 33.333%;
+	float: left;
+	text-align: center;
 }
