correct layout of sidebar mods at 480

--- a/template/templates/unitedway/sass/modules-760.scss
+++ b/template/templates/unitedway/sass/modules-760.scss
@@ -13,31 +13,10 @@
 	}
 }
 
-#sidebar {
-	
-	.module,
-	.module:nth-child(5),
-	.module:nth-child(9) {
-		width: 97.875%;
-		margin-left: 2.127659574%; //20px
-		padding-bottom: 20px;
-		margin-bottom: 10px;
-		clear: both;
-	}
-	
-	.module:nth-child(2),
-	.module:nth-child(3),
-	.module:nth-child(4),
-	.module:nth-child(6),
-	.module:nth-child(7),
-	.module:nth-child(8),
-	.module:nth-child(10),
-	.module:nth-child(11),
-	.module:nth-child(12) {
-		width: 31.205673759%;
-		float: left;
-		clear: none;
-	}
+#sidebar .module {
+	width: 33.333333333%%;
+	float: left;
+	clear: none;
 }
 
 .module.social-links {
@@ -47,10 +26,12 @@
 }
 
 #bottom .module {
-	width: 31.205673759%;
+	width: 33.333333333%;
 	&.first {
-		width: 31.205673759%;
+		width: 33.333333333%;
 	}
+}
+
 #copyright {
 	width: 33.333%;
 	float: left;
