footer padding and bg colour added

--- a/template/templates/unitedway/sass/layout.scss
+++ b/template/templates/unitedway/sass/layout.scss
@@ -38,8 +38,9 @@ body.menu-open #wrapper {
 }
 
 #footer {
-	padding: 20px 0 0;
-	background: url('../images/bg_footerRepeat.png') top center repeat-x;
+	text-align: center;
+	padding: 20px 0;
+	background: #aa0c04 url('../images/bg_footerRepeat.png') top center repeat-x;
 	min-height: 174px;
 	
 	font-size: 12px;
