default link colors set

--- a/template/templates/unitedway/sass/elements.scss
+++ b/template/templates/unitedway/sass/elements.scss
@@ -41,11 +41,11 @@ h5 { font-size: 1.2em; }
 h6 { font-size: 1.0em; }
 
 a, a:active, a:visited {
-	color: red;
+	color: $red;
 	text-decoration: none;
 }
 a:hover {
-	color: teal;
+	color: $red;
 	text-decoration: underline;
 }
 
