--- a/template/templates/unitedway/sass/forms.scss
+++ b/template/templates/unitedway/sass/forms.scss
@@ -26,3 +26,28 @@ input:invalid, textarea:invalid {
 /* Make buttons play nice in IE:
    www.viget.com/inspire/styling-the-button-element-in-internet-explorer/ */
 button {  width: auto; overflow: visible; }
+
+.multiline_start {
+	clear: left !important;
+}
+
+.cfdiv_header {
+	min-width: 232px;
+}
+
+.ccms_form_element {
+	padding-left: 0;
+	
+	label {
+		width: auto;
+		min-width: 237px;
+	}
+	
+	p {
+		margin: 0;
+	}
+}
+
+.small-message {
+	margin-left: 0;
+}
