--- a/template/templates/unitedway/sass/menu.scss
+++ b/template/templates/unitedway/sass/menu.scss
@@ -13,6 +13,10 @@
 		position: relative;
 	
 		padding: 0 5px;
+
+		&:hover div {
+			display: block;
+		}
 	}
 
 	.menu > li > a,
@@ -24,20 +28,10 @@
 		}
 	}
 
-	ul ul { // submenu
-		position: absolute;
-		top: 100%;
-		left: 0;
+	ul ul {
+		list-style: none;
+		padding-left: 0;
 		margin: 0;
-		padding: 0;
-
-		li {
-			white-space: nowrap;
-			
-			&.last a {
-				color: $text;
-			}
-		}
 	}
 }
 
@@ -50,22 +44,58 @@
 		&:first-child {
 			padding-left: 0;
 		}
-		&.last {
-			float: right;
-			
+		&.active {
 			a {
-				color: $red;
+				color: black;
+			}
+
+			li a {
+				color: white;
 			}
 		}
-		&:hover a,
-		&.active a {
-			color: black;
-			text-decoration: none;
+	}
+
+	li > div { // submenu
+		display: none;
+		position: absolute;
+		top: 100%;
+		left: 0;
+		background: url('../images/bg_dropmenu-top.png') 28px top no-repeat;
+		padding-top: 8px;
+
+		ul {
+			margin: 0;
+			font-weight: normal;
+			border-radius: 4px;
+			background-color: $medium-red;
+			box-shadow: -3px 2px 3px rgba(black, .25);
+			padding: 10px 0;
+		}
+
+		li {
+			&:hover {
+				background-color: $dark-red;
+			}
+		}
+
+		a {
+			color: white;
+			padding: 0 10px;
+			line-height: 22px;
+			white-space: nowrap;
+
+			&:hover {
+				color: white;
+			}
 		}
 	}
 		
 	a {
 		color: #5f6062;
+		&:hover {
+			color: black;
+			text-decoration: none;
+		}
 	}
 }
 
