--- a/template/templates/unitedway/sass/forms.scss
+++ b/template/templates/unitedway/sass/forms.scss
@@ -27,27 +27,226 @@ input:invalid, textarea:invalid {
    www.viget.com/inspire/styling-the-button-element-in-internet-explorer/ */
 button {  width: auto; overflow: visible; }
 
+form.Chronoform {
+	margin-top: 1em;
+}
+
 .multiline_start {
 	clear: left !important;
 }
 
-.cfdiv_header {
-	min-width: 232px;
-}
-
-.ccms_form_element {
-	padding-left: 0;
-	
-	label {
-		width: auto;
-		min-width: 237px;
-	}
-	
-	p {
-		margin: 0;
-	}
-}
-
 .small-message {
 	margin-left: 0;
+}
+
+//removes powered by
+.chronoform {
+	display: none;
+}
+
+//css for form not using chronoform css
+
+label {
+	font-size: 14px;
+	font-weight: bold;
+	line-height: 18px;
+}
+
+.width-16 {
+	width: 16.666%;
+	float: left;
+}
+
+.width-20 {
+	width: 20%;
+	float: left;
+}
+
+.width-25 {
+	width: 25%;
+	float: left;
+}
+
+.width-33 {
+	width: 33.33%;
+	float: left;
+}
+
+.width-40 {
+	width: 40%;
+	float: left;
+}
+
+.width-50 {
+	width: 50%;
+	float: left;
+}
+
+.width-60 {
+	width: 60%;
+	float: left;
+}
+
+.width-66 {
+	width: 66.66%;
+	float: left;
+}
+
+.width-100 {
+	width: 100%;
+	float: left;
+}
+
+.multiline_start {
+	clear: both;
+}
+
+.style-1 {
+	label {
+		width: 50%;
+		float: left;
+	}
+}
+
+.style-3 {
+	overflow: auto;
+
+	label {
+		height: 2em;
+		vertical-align: bottom;
+	}
+
+	input {
+		width: 95%;
+	}
+}
+
+.style-4 {
+	text-align: center;
+	margin: 2em 0 1em;
+	overflow: auto;
+
+	.width-40 {
+		text-align: left;
+		&:first-child {
+			text-align: center;
+		}
+	}
+
+	input {
+		width: 95%;
+	}
+}
+
+.style-6 {
+	margin: 2em 0 1em;
+	overflow: auto;
+
+	input {
+		width: 95%;
+	}
+}
+
+//5 column table
+.style-7 {
+	overflow: auto;
+	margin: 2em 0 1em;
+
+	input {
+		width: 95%;
+	}
+}
+
+.style-8 {
+
+	overflow: auto;
+
+	h3 {
+		margin: 0 0 1em;
+		text-align: center;
+	}
+
+	input {
+		width: 95%;
+	}
+
+	.cfdiv_header.multiline_add {
+		text-align: center;
+	}
+}
+
+.style-9 {
+	overflow: auto;
+
+	input {
+		width: 95%;
+	}
+}
+
+//default 
+
+.ccms_form_element {
+	margin-bottom: 3px;
+
+	p {
+		margin: .63em 0;
+	}
+
+	textarea {
+		width: 100%;
+	}
+}
+
+.cfdiv_textarea {
+	label {
+		display: block;
+		margin-top: 1em;
+	}
+}
+
+//headers
+.cfdiv_header {
+	label {
+		display: block;
+		margin-top: 1.5em;
+	}
+
+	&.multiline_start {
+		min-height: 30px;
+
+		p {
+				margin: 0;
+		}
+	}
+}
+
+//checkbox groups
+.cfdiv_checkboxgroup {
+	margin-top: 10px;
+
+	> label {
+		float: left;
+		min-width: 150px;
+	}
+}
+
+.cfdiv_checkboxgroup.label_over {
+
+	> label {
+		width: 100%;
+	}
+
+	input {
+		float: left;
+		clear: left;
+		margin: 7px 5px 0px;
+	}
+
+	div {
+		label {
+			font-weight: normal;
+			float: left;
+			margin-top: 6px;
+		}
+	}
 }
