blog, article and category h1 styled

--- a/template/templates/unitedway/sass/elements.scss
+++ b/template/templates/unitedway/sass/elements.scss
@@ -27,15 +27,26 @@ h1, h2, h3, h4, h5, h6 {
 	padding: .83em 0;
 }
 
-.item-page h1 {
+.item-page h1,
+.blog > h1,
+.category-list > h1 {
 	font-size: 15px;
 	color: $red;
 	background: url('../images/divider_dotted.png') bottom center repeat-x;
 }
 
+.items-row h1,
+h2 {
+	font-size: 18px;
+	padding-bottom: 0;
+}
+
+h3 {
+	font-size: 16px;
+	padding-bottom: 0;
+}
+
 h1 { font-size: 2em; }
-h2 { font-size: 1.8em; }
-h3 { font-size: 1.6em; }
 h4 { font-size: 1.4em; }
 h5 { font-size: 1.2em; }
 h6 { font-size: 1.0em; }
