red colours added as variables

--- a/template/templates/unitedway/sass/_variables.scss
+++ b/template/templates/unitedway/sass/_variables.scss
@@ -1,5 +1,7 @@
 $text: #4e4e4e;
 $dark-grey: #5f6062;
 $red: #ee2e24;
+$medium-red: #d41b12;
+$dark-red: #b5100b;
 $blue: #10247b;
 $yellow: #eea928;
