import of thermometer css

--- a/template/templates/unitedway/sass/template.min.scss
+++ b/template/templates/unitedway/sass/template.min.scss
@@ -18,6 +18,7 @@
 @import "styles";
 @import "blog";
 @import "com_content";
+@import "thermometer";
 
 // @import "grid-320";
 @import "layout-320";
