align centre on thermometer by default

--- a/template/templates/unitedway/sass/modules.scss
+++ b/template/templates/unitedway/sass/modules.scss
@@ -73,6 +73,11 @@
 #bottom {
 	
 	.module {
+.module.thermometer {
+	.custom {
+		text-align: center;
+	}
+}
 		background-repeat: no-repeat;
 		background-position: bottom right;
 		background-size: 25%;
