inherit alignment on thermometer after 960

--- a/template/templates/unitedway/sass/modules-960.scss
+++ b/template/templates/unitedway/sass/modules-960.scss
@@ -1,4 +1,9 @@
 #sidebar .module:nth-child(n) {
 	width: 100%;
 	margin-left: 0;
+.module.thermometer {
+	.custom {
+		text-align: inherit;
+	}
+}
 }
