--- a/template/templates/unitedway/sass/modules-960.scss
+++ b/template/templates/unitedway/sass/modules-960.scss
@@ -1,9 +1,17 @@
-#sidebar .module:nth-child(n) {
-	width: 100%;
-	margin-left: 0;
 .module.thermometer {
 	.custom {
 		text-align: inherit;
 	}
 }
+
+.module.sidebar {
+	margin-top: 0;
+	.home & {
+		margin-top: 1em;
+	}
+
+	&:nth-child(n) {
+		width: 100%;
+		margin-left: 0;
+	}
 }
