content and sidebar float left by default

--- a/template/templates/unitedway/sass/layout.scss
+++ b/template/templates/unitedway/sass/layout.scss
@@ -55,7 +55,16 @@ body.menu-open #wrapper {
 	}
 }
 
-#content.wide1 {
+#content {
+	float: left;
+
+	&.wide1 {
+		width: 100%;
+	}
+}
+
+#sidebar {
+	float: left;
 	width: 100%;
 }
 
