article, blog and category h1 has margin bottom and padding bottom

--- a/template/templates/unitedway/sass/elements.scss
+++ b/template/templates/unitedway/sass/elements.scss
@@ -33,6 +33,8 @@ h1, h2, h3, h4, h5, h6 {
 	font-size: 15px;
 	color: $red;
 	background: url('../images/divider_dotted.png') bottom center repeat-x;
+	margin-bottom: 1em;
+	padding-top: 15px;
 }
 
 .items-row h1,
