--- a/template/templates/unitedway/sass/elements.scss
+++ b/template/templates/unitedway/sass/elements.scss
@@ -53,6 +53,10 @@ h4 { font-size: 1.4em; }
 h5 { font-size: 1.2em; }
 h6 { font-size: 1.0em; }
 
+p {
+	margin-top: 0;
+}
+
 a, a:active, a:visited {
 	color: $red;
 	text-decoration: none;
