twitter feed layout finished

--- a/template/templates/unitedway/sass/modules-760.scss
+++ b/template/templates/unitedway/sass/modules-760.scss
@@ -7,10 +7,9 @@
 
 .module.feed-twitter {
 	width: 80%;
-	
-	.twitter-tweet {
-		text-align: left;
-	}
+	text-align: left;
+	background-position: left center;
+	padding: 10px 0 10px 150px;
 }
 
 .module.sidebar {
