import of slideshow scss files

--- a/template/templates/unitedway/sass/template.min.scss
+++ b/template/templates/unitedway/sass/template.min.scss
@@ -19,6 +19,7 @@
 @import "blog";
 @import "com_content";
 @import "thermometer";
+@import "slideshow";
 
 // @import "grid-320";
 @import "layout-320";
@@ -34,12 +35,14 @@
 	@import "layout-760";
 	@import "modules-760";
     @import "styles-760";
+    @import "slideshow-760";
 }
 @media only screen and (min-width:960px) {
 	@import "layout-960";
 	@import "modules-960";
 	@import "menu-960";
     @import "styles-960";
+    @import "slideshow-960";
 }
 @media only screen and (min-width:1100px) {
     // @import "1100-up";
