--- a/template/templates/unitedway/sass/template-ie.scss
+++ b/template/templates/unitedway/sass/template-ie.scss
@@ -19,6 +19,7 @@
 @import "blog";
 @import "com_content";
 @import "thermometer";
+@import "slideshow";
 
 // @media queries
 // @import "grid-320";
@@ -32,8 +33,10 @@
 @import "layout-760";
 @import "modules-760";
 @import "styles-760";
+@import "slideshow-760";
 @import "layout-960";
 @import "modules-960";
 @import "menu-960";
 @import "styles-960";
+@import "slideshow-960";
 // don't load 1100, assume std desktop
