--- a/template/templates/unitedway/sass/thermometer.scss
+++ b/template/templates/unitedway/sass/thermometer.scss
@@ -50,12 +50,16 @@
 	.mercury {
 		bottom: 0px;
 		left: 11px;
+		height: 100%;
+		padding: 5px 0;
 		width: 11px;
-		background: url('../images/bg_mercury-repeat.png') bottom center repeat-y;
 
 		> div {
-			background: url('../images/bg_mercury-top.png') top center no-repeat;
-			padding-top: 3px;
+			background: url('../images/bg_mercury.jpg') top center no-repeat;
+			position: absolute;
+			bottom: 0px;
+			width: 11px;
+			padding-top: 10px;
 		}
 	}
 }
