fixed padding on twitter feed

--- a/template/templates/unitedway/sass/modules-760.scss
+++ b/template/templates/unitedway/sass/modules-760.scss
@@ -10,6 +10,10 @@
 	text-align: left;
 	background-position: left center;
 	padding: 10px 0 10px 150px;
+
+	#twitter_update_list {
+		padding-left: 40px;
+	}
 }
 
 .module.sidebar {
