--- a/template/templates/unitedway/sass/modules.scss
+++ b/template/templates/unitedway/sass/modules.scss
@@ -42,17 +42,11 @@
 	background: url('../images/icon_twitter-bird.png') top center no-repeat;
 	background-size: 143px;
 	padding: 40px 0 0 0;
-	
-	.twitter-title {
-		font-size: 15px;
-		color: $red;
-		margin: 0 auto 10px;
-		padding-top: 0;
-		width: 145px;
-	}
+	width: 100%;
 	
 	#twitter_update_list {
 		margin: 0;
+		padding: 0;
 
 		li {
 			list-style: none;
