--- a/template/templates/unitedway/sass/styles.scss
+++ b/template/templates/unitedway/sass/styles.scss
@@ -12,15 +12,14 @@
 ::-moz-selection{ background: $red; color:#fff; text-shadow: none; }
 ::selection { background: $red; color:#fff; text-shadow: none; }
 
-.image-border {
-	box-shadow: 0px 0px 8px rgba(0, 0, 0, .15);
-	border: 4px solid #fff;
-}
-
 //positioned bottom left
 a.read-more {
 	color: $dark-grey;
 	font-weight: bold;
+}
+
+.image-border {
+	@include image-border;
 }
 
 //mod backgrounds
